browser/web/css/style.css
/* ... */
.discussionPostDiv > .addDiscussionPostDiv
{
	margin-bottom: 10px;
}

.discussionAuthorInput, .discussionPostInput
{
	width:100%;
}

#tooltipbackgrounddiv
{
	z-index:1001;
}

#tooltipDiv
{
	border:1px solid black;
	background-color:#FFF;
	position:fixed;
	padding:10px;
	display: none;
	z-index:100000;
}

#tooltipContentDiv
{
	overflow:auto;
	position:relative;	
}

#tooltipDiv table
{
	border: 0px solid black;
	border-spacing: 0px;
	table-layout: fixed;
	width:100%;
}
#tooltipDiv table td,#tooltipDiv table th
{
	border: 1px solid black;
	padding: 5px;
}
#tooltipDiv th:nth-of-type(1)
{
	width:20%;
	min-width:300px;
}
#tooltipDiv th:nth-of-type(2)
{
	width:10%;
}
#tooltipDiv th:nth-of-type(3), #tooltipDiv th:nth-of-type(4)
{
	width:35%;
}
.tooltipedDiv
{
	z-index:1000000;
}

.treePathDiv:after
{
    content: ' ';
    display: block;
    clear: both;
}

.headPathDiv
{
	display:inline-block;
	float:left;
	clear:both;
	padding-top:5px;
}

.headPathDiv:hover
{
	/*cursor:pointer;*/
	text-decoration:underline;
}

/*

div.detailsButton
{
	display:inline-block;
	float:right;
	margin-right:5px;
	padding-left:3px;
	padding-right:3px;
	cursor:pointer;
}

div.infoButton
{
	background-color:#08088A;
	color:#FFF;
}

div.discussionButton
{
	background-color:#61210B;
	color:#FFF;	
}

div.infoButton:hover
{
	background-color:#FFF;
	color:#999;
}

*/

#provenance_div
{
	position:relative; 
	display:flex;
	flex-grow:1;
	height:calc(100% - 30px);
	overflow:scroll;
}
#provenance_date_column
{
	height:calc(100% - 0px);
	width:100px;
	display:flex;
	position:relative;
	overflow:hidden;
}
#provenance_changes_column
{
	display:flex;
	flex-direction:column;	
	position:absolute;
	min-width:100%;
}

.dayLine
{
	border-top:1px solid #DDD !important;
	height:0px;
	position:relative;
	margin-top:3px;
	display:flex;
	flex-shrink:0;
}
.dayLine.with_content
{
	height:10px;
	margin-top:12px;
}

.provenance_bar_row
{
	height:20px;
	margin-top:-10px;
	display:flex;
	flex-direction:row-reverse;
	justify-content: flex-end;
	position:relative;
	padding-right:10px;
}

.provenance_bar_row_date
{
	position:absolute;
	background-color:white;
	border:1px solid white !important;
	width:90px;
	margin-top:3px;
	padding-left:5px;
	/*display:none;*/
	cursor:pointer;
}
.provenance_bar_row_date.odd
{
	color: #0492D0 !important;
}

.provenance_bar_commit_cell
{
	height:18px;
	border:1px solid #333 !important;
	border-radius:3px;
	margin-left:10px;
	display:none;
	flex-direction:row;
}
.provenance_bar_commit_cell.with_content
{
	display:flex;
}

.provenance_bar_cell
{
	height:16px;
	border:1px solid white;
	text-align:center;
	cursor:pointer;
	display:none;
	font-size:12px;
	white-space: nowrap;
}
.provenance_bar_cell:hover:before
{
	/*content: "show in tree";*/
}

.provenance_bar_cell:first-child
{
	border-bottom-left-radius:2px;
	border-top-left-radius:2px;
}

.provenance_bar_cell:last-child
{
	border-bottom-right-radius:2px;
	border-top-right-radius:2px;
}

.provenance_bar_cell.literal
{
	background-color:#0492D0;
	color:#333;
	border-color:#0492D0 !important;
}

.provenance_bar_cell.progress 
{
	background-color:#F0F0F0;
	color:#333;
	border-color:#F0F0F0 !important;
}

.provenance_bar_cell.semantic 
{
	background-color:#BFE3F2;
	color:#333;
	border-color:#BFE3F2 !important;
}

.provenance_bar_cell.structure 
{
	background-color:#0A3769;
	color:#F0F0F0;
	border-color:#0A3769 !important;
}

.provenance_bar_cell.nonhighlight
{
	opacity: 0.3;
}
.provenance_bar_cell.hidden:not(.highlight)
{
	/*display:none !important;*/
	opacity:0.1;
}
.provenance_bar_cell.highlight
{
	background-color:#333 !important;
	color:#F0F0F0 !important;
	border-color:#333 !important;
}

.provenance_button
{
	border:1px solid #333 !important;
	background-color:#0492D0;
	color:#F0F0F0;
	border-radius:3px;
	height:20px;
	text-align:center;
	z-index:1000;
	cursor:pointer;	
}
.provenance_button:hover{
	background-color: #F0F0F0;
	color:#0492D0;
}
#provenance_loadMoreDiv
{
	position:absolute;
	bottom:0px;
	width:300px;
	left:0px;
}
#provenance_loadMoreButtonDiv
{	
	margin-right:5px;
	width:80px;
	display:inline-block;
}
#provenance_loadMoreAmountInput
{
	width:15px;
}
#provenance_loadAllInTreeDiv
{
	position:absolute;
	bottom:0px;
	left:250px;
	width:160px;
}

#provenance_legendDiv.provenance_bar_commit_cell
{
	position:absolute;
	display:flex;
	bottom:0px;
	right:0px;
}
#provenance_legendDiv > .provenance_bar_cell
{
	display:block;
	width:100px;
	margin:0px;
}
#provenance_legendDiv > .provenance_bar_cell:hover:before
{
	content: "";
}

div.button
{
	border:1px solid #333 !important;
	background-color:#0492D0;
	color:#F0F0F0;
	border-radius:3px;
	height:20px;
	text-align:center;
	cursor:pointer;	
	opacity:1.0 !important;
}
div.button:hover{
	background-color: #F0F0F0;
	color:#0492D0;
}

.treeDescriptionItemMoved
{
	background-color:#FFEBD8;
	padding:10px;
}

.treeDescriptionTable
{
	border-spacing: 0px;
	position:relative;
	width:100%;
}
.treeDescriptionTable td, .treeDescriptionTable th
{
	padding-left:10px;
	padding-right:10px;
	vertical-align:top;
}
.treeDescriptionTable td:nth-last-child(2),.treeDescriptionTable td:last-child
{
	width:300px;
    -ms-word-break: break-all;
    word-break: break-all;
    word-break: break-word;
	border-left:0px;
}
.treeDescriptionTable td, .treeDescriptionTable th
{
	text-align:right;
}
.treeDescriptionTable th:nth-last-child(3):not(:first-child), .treeDescriptionTable td:nth-last-child(3):not(:first-child)
{
	width:100px;
	text-align:left;
}

.treeDescriptionTable td:last-child, .treeDescriptionTable th:last-child, .treeDescriptionTable td:nth-last-child(2), .treeDescriptionTable th:nth-last-child(2)
{
	text-align:left;
}

.treeDescriptionDiv
{
	font-size:12px;
	color:#333;
	position:relative;
}
.treeItem.expanded:last-child >.treeItemTitleDiv > .treeDescriptionDiv
{
	margin-left:1px;
}
.treeItem.expanded:last-child >.treeItemTitleDiv >.treeDescriptionDiv
{
	margin-left:-9px !important;
}
/* ... */

